[gd_scene load_steps=4 format=3 uid="uid://bmxgjf477bhxt"]

[ext_resource type="Texture2D" uid="uid://by8lwldcvhfq0" path="res://assets/symbols.png" id="1_cw7dx"]
[ext_resource type="Script" uid="uid://c1nj5j8xmwwj2" path="res://nodes/generator/inspector.gd" id="1_v2nbu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_txcjx"]
atlas = ExtResource("1_cw7dx")
region = Rect2(192, 192, 48, 48)

[node name="Generator" type="VBoxContainer"]
offset_right = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_v2nbu")

[node name="For" type="Label" parent="."]
layout_mode = 2
text = "GENERATOR_INSPECTOR_FIELD_FOR"

[node name="Variable" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="List" type="OptionButton" parent="Variable"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Filtered" type="Button" parent="Variable"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
tooltip_text = "GENERATOR_INSPECTOR_APPLY_GLOBAL_VAR_FILTERS_TOOLTIP"
toggle_mode = true
icon = SubResource("AtlasTexture_txcjx")
icon_alignment = 1
expand_icon = true

[node name="Generate" type="Label" parent="."]
layout_mode = 2
text = "GENERATOR_INSPECTOR_FIELD_GENERATE"

[node name="Method" type="OptionButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Arguments" type="PanelContainer" parent="."]
visible = false
layout_mode = 2

[node name="RandomInt" type="VBoxContainer" parent="Arguments"]
visible = false
layout_mode = 2

[node name="From" type="HBoxContainer" parent="Arguments/RandomInt"]
layout_mode = 2

[node name="Label" type="Label" parent="Arguments/RandomInt/From"]
layout_mode = 2
size_flags_horizontal = 3
text = "GENERATOR_INSPECTOR_FIELD_FROM"

[node name="Value" type="SpinBox" parent="Arguments/RandomInt/From"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
allow_greater = true
alignment = 1

[node name="To" type="HBoxContainer" parent="Arguments/RandomInt"]
layout_mode = 2

[node name="Label" type="Label" parent="Arguments/RandomInt/To"]
layout_mode = 2
size_flags_horizontal = 3
text = "GENERATOR_INSPECTOR_FIELD_TO"

[node name="Value" type="SpinBox" parent="Arguments/RandomInt/To"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
min_value = 2.0
value = 100.0
allow_greater = true
alignment = 1

[node name="Modifiers" type="HBoxContainer" parent="Arguments/RandomInt"]
layout_mode = 2

[node name="Negative" type="CheckBox" parent="Arguments/RandomInt/Modifiers"]
layout_mode = 2
size_flags_horizontal = 3
text = "GENERATOR_INSPECTOR_RANDOM_INT_NEG"

[node name="Even" type="CheckBox" parent="Arguments/RandomInt/Modifiers"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "GENERATOR_INSPECTOR_RANDOM_INT_EVEN"

[node name="Odd" type="CheckBox" parent="Arguments/RandomInt/Modifiers"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "GENERATOR_INSPECTOR_RANDOM_INT_ODD"

[node name="RandomAscii" type="VBoxContainer" parent="Arguments"]
visible = false
layout_mode = 2

[node name="Pool" type="HBoxContainer" parent="Arguments/RandomAscii"]
layout_mode = 2

[node name="Label" type="Label" parent="Arguments/RandomAscii/Pool"]
layout_mode = 2
size_flags_horizontal = 3
text = "GENERATOR_INSPECTOR_RANDOM_ASCII_POOL"

[node name="Value" type="LineEdit" parent="Arguments/RandomAscii/Pool"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
placeholder_text = "GENERATOR_INSPECTOR_RANDOM_ASCII_POOL_PLACEHOLDER"
alignment = 1

[node name="Length" type="HBoxContainer" parent="Arguments/RandomAscii"]
layout_mode = 2

[node name="Label" type="Label" parent="Arguments/RandomAscii/Length"]
layout_mode = 2
size_flags_horizontal = 3
text = "GENERATOR_INSPECTOR_RANDOM_ASCII_LENGTH"

[node name="Value" type="SpinBox" parent="Arguments/RandomAscii/Length"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
min_value = 1.0
value = 1.0
allow_greater = true
alignment = 1

[node name="FromStrSet" type="VBoxContainer" parent="Arguments"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Arguments/FromStrSet"]
layout_mode = 2
text = "GENERATOR_INSPECTOR_FROM_STR_SET_POOL"

[node name="Pool" type="TextEdit" parent="Arguments/FromStrSet"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "* Separated with [delimiter]"
